<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".OboeSavior">
    <RadioGroup android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
        <RadioButton android:id="@+id/choose_main"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/type_main"
                     android:enabled="false"/>
        <RadioButton android:id="@+id/choose_lock"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/type_lock"
                     android:enabled="false"/>
        <Space  android:layout_width="12dp"
                android:layout_height="wrap_content"/>
        <Button android:id="@+id/unlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlock"/>
    </RadioGroup>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <Space  android:layout_width="6dp"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/def_dir"/>
        <Space  android:layout_width="6dp"
                android:layout_height="wrap_content"/>
        <EditText android:id="@+id/f_name"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.4"
                  android:text="@string/def_fn"
                  android:importantForAutofill="no"/>
        <Space  android:layout_width="6dp"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/def_ext"/>
        <Space  android:layout_width="12dp"
                android:layout_height="wrap_content"/>
        <Button android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/save"/>
    </LinearLayout>
    <ImageView android:id="@+id/preview"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="fitCenter"
               android:src="@drawable/nothing"
               tools:ignore="ContentDescription"/>
</LinearLayout>